--- a/k8s/persistent-volume-claim.yaml
+++ b/k8s/persistent-volume-claim.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: api-escolar-pvc
-  namespace: api-escolar
+  namespace: gestao-escolar
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: standard 
+  storageClassName: hostpath
