--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-escolar-service
-  namespace: api-escolar
+  namespace: gestao-escolar
   labels:
     app: api-escolar
 spec:
