--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: api-escolar-config
   namespace: gestao-escolar
 data:
-  DATABASE_URL: "sqlite:///app/escola.db"
+  DATABASE_URL: "sqlite:///app/db/escola.db"
   LOG_LEVEL: "INFO"
   API_TITLE: "API de Gestão Escolar"
   API_VERSION: "1.0.0" 
