add ingress k8s api-escolar

--- a/k8s/ingress-docker-desktop.yaml
+++ b/k8s/ingress-docker-desktop.yaml
@@ -2,17 +2,22 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: api-escolar-ingress
-  namespace: api-escolar
+  namespace: gestao-escolar
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    # Configurações específicas para Docker Desktop
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "Host: api-escolar.local";
 spec:
+  ingressClassName: nginx
   rules:
-  - host: api-escolar.com.br # host do ingress
+  - host: api-escolar.local
     http:
       paths:
-      - path: / # caminho do ingress
-        pathType: Prefix # tipo de caminho
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: api-escolar-service
