--- a/.github/workflows/build-and-push-gcp.yaml
+++ b/.github/workflows/build-and-push-gcp.yaml
@@ -34,6 +34,23 @@ jobs:
       run: |
         gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev
         
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest
+
+    - name: Run tests with pytest
+      run: pytest
+
+    - name: Install Trivy
+      uses: aquasecurity/trivy-action@v0.16.0
+
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
@@ -63,3 +80,12 @@ jobs:
         echo "Image built and pushed successfully!"
         echo "Repository: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_ID }}/${{ env.IMAGE_NAME }}"
         echo "Tags: ${{ steps.meta.outputs.tags }}"
+
+    - name: Scan Docker image with Trivy
+      uses: aquasecurity/trivy-action@v0.16.0
+      with:
+        image-ref: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_ID }}/${{ env.IMAGE_NAME }}:latest
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
